jenkins_build/kubernetes/jenkins-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkins
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jenkins
  template:
    metadata:
      labels:
        app: jenkins
    spec:
      containers:
      - name: jenkins
        #image: jenkins/jenkins:lts-jdk11
        image: jenkins/jenkins:latest
        ports:
          - name: http-port
            containerPort: 8080
          - name: jnlp-port
            containerPort: 30000
        volumeMounts:
        - name: jenkins-home
          mountPath: /var/jenkins_home
      volumes:
      - name: jenkins-home
        nfs:
          server: 192.168.1.3
          path: /srv/nfs/jenkins_home
          readOnly: false
