jenkins_build/kubernetes/jenkins-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins-svc
spec:
  #type: NodePort
  type: ClusterIP
  selector:
    app.kubernetes.io/name: jenkins
  ports:
    - name: http-port
      protocol: TCP
      port: 8080
      targetPort: 8080
        #- name: jnlp-port
        #protocol: TCP
        #port: 30000
        #targetPort: 30000
        #nodePort: 30000
  selector:
    app: jenkins
