jenkins_build/kubernetes/my-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins-svc-2
spec:
  type: NodePort
  #type: ClusterIP
  selector:
    app.kubernetes.io/name: jenkins
  ports:
    - protocol: TCP
      port: 30000
      nodePort: 30000
      targetPort: 30000
  selector:
    app: jenkins
